HBASE-22199 Replaced UTF-8 String with StandardCharsets.UTF_8